# mlops

./: README.md  pyproject.toml  tracker.yaml
data/: constants.py
forecast_mlops/: mlflow_tracker.py
forecast_mlops/models/: neuralprophet_model.py
reference/: demand_hourly.csv  run_neuralprophet_model.py
