[project]
name = "forecast_mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "karin.wu@rgare.com"}
]
readme = "README.md"
requires-python = ">=3.10, <=3.12"
dependencies = [
    "neuralprophet (>=0.9.0,<0.10.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "mlflow (>=2.21.3,<3.0.0)",
    "pyrootutils (>=1.0.4,<2.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "ipywidgets (>=8.1.6,<9.0.0)",
    "flake8 (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py310"]
include = '\.pyi?$'
force-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
[project]
name = "forecast_mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "karin.wu@rgare.com"}
]
readme = "README.md"
requires-python = ">=3.10, <=3.12"
dependencies = [
    "neuralprophet (>=0.9.0,<0.10.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "mlflow (>=2.21.3,<3.0.0)",
    "pyrootutils (>=1.0.4,<2.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "ipywidgets (>=8.1.6,<9.0.0)",
    "flake8 (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py310"]
include = '\.pyi?$'
force-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
